fix spacing

--- a/src/styles/field.css
+++ b/src/styles/field.css
@@ -52,7 +52,7 @@
     }
 
     to {
-        opacity: 1;
+        opacity: 0.8;
     }
 }
 
